--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="colorBackground">#FFFF5500</color>
+    <color name="colorBackground">#FFFFFF</color>
     <color name="colorPaint">#FFFFEB3B</color>
 </resources>
